Language toggle dropdown fix
Language toggle-dropdown values in black are hard to read, so I added
changed the color to #fff to the small & extra small media queries for
that language dropdown-menu

--- a/styles/online_sponsoring/style.css
+++ b/styles/online_sponsoring/style.css
@@ -674,10 +674,13 @@ padding-top: 5px;
       font-size: 33px;
       line-height: 36px;
     }
-    
-	.start_inside{
-		width:100%; 
-	}
+      
+  	.start_inside{
+  		width:100%; 
+  	}
+    ul.dropdown-menu li a {
+      color: #fff;
+    }
 
 }
 @media (min-width:400px) and (max-width:767px) {
@@ -687,6 +690,9 @@ padding-top: 5px;
 	.jumbo-title-span-4 {
 	    font-size: 60px;
 	}
+    ul.dropdown-menu li a {
+      color: #fff;
+    }
 }
 @media (max-width: 767px) {
     .navbar-fixed-top, #pagenav.affix {
